--- a/src/main/res/layout/view_route.xml
+++ b/src/main/res/layout/view_route.xml
@@ -4,23 +4,28 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <Button
-        android:id="@+id/start_route_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:text="@string/start_new_route" />
-
-    <ListView
-        android:id="@+id/route_list_view"
+    <FrameLayout
+        android:id="@+id/view_route_main_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/start_route_button"
-        android:layout_below="@+id/start_route_button"
-        android:layout_marginTop="101dp" >
-    </ListView>
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/start_route_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/start_new_route" />
 
+        <ListView
+            android:id="@+id/route_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="101dp" >
+        </ListView>
+    </FrameLayout>
+    <FrameLayout
+        android:id="@+id/fragment_route_config_placeholder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </FrameLayout>
 </RelativeLayout>
