--- a/src/main/res/menu/menu_session.xml
+++ b/src/main/res/menu/menu_session.xml
@@ -2,9 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/menu_route_config_configure"
+        android:title="@string/menu_config_route_configure"
+        android:orderInCategory="100"
+        app:showAsAction="never">
+    </item>
+
+    <item
         android:id="@+id/menu_session_action_signout"
         android:title="@string/menu_session_signout"
-        android:orderInCategory="100"
+        android:orderInCategory="200"
         app:showAsAction="never">
     </item>
 </menu>
